<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="true"
    android:layout_marginStart="@dimen/_8DP"
    android:layout_marginTop="@dimen/_8DP"
    android:layout_marginEnd= "@dimen/_8DP"
    app:cardCornerRadius="@dimen/_8DP"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/nameTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/nameTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameTextView1"
        app:layout_constraintTop_toTopOf="@+id/nameTextView1"
        tools:text="@tools:sample/lorem[3]" />

    <TextView
        android:id="@+id/jobTitleTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/job_title"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView1"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView1" />

    <TextView
        android:id="@+id/jobTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="@+id/jobTitleTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/jobTitleTextView1"
        app:layout_constraintTop_toTopOf="@+id/jobTitleTextView1"
        tools:text="@tools:sample/lorem[4]" />

    <TextView
        android:id="@+id/ageTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/age"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/jobTitleTextView1"
        app:layout_constraintTop_toBottomOf="@+id/jobTitleTextView1" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ageTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ageTextView1"
        app:layout_constraintTop_toTopOf="@+id/ageTextView1"
        tools:text="@tools:sample/lorem[2]" />

    <TextView
        android:id="@+id/generTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/gender"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ageTextView1"
        app:layout_constraintTop_toBottomOf="@+id/ageTextView1" />

    <TextView
        android:id="@+id/generTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/generTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/generTextView1"
        app:layout_constraintTop_toTopOf="@+id/generTextView1"
        tools:text="@tools:sample/lorem[2]" />
  </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>